# dighosp_monorepo

./: .gitattributes  .gitignore  .pylintrc  README.md  compose.dev.yml  compose.override.yml  compose.prod.yml  compose.yml  docker-bake.hcl  pyproject.toml.example  scripts.sh  test.txt
.github/workflows/: docker.yml  docs.yml
assets/: config_base.xlsx  config_lift_down.xlsx  custom.css  dashAgGridComponentFunctions.js
dighosp-des/: .env  .gitignore  api.Dockerfile  compose.yml  des-worker.Dockerfile  pyproject.toml  redis-worker.Dockerfile
dighosp-des/dighosp_des/: api.py  conf.py  config.py  distributions.py  excel.py  kpis.py  model.py  redis_worker.py  specimens.py
dighosp-des/dighosp_des/process/: __init__.py  core.py  p10_reception.py  p20_cutup.py  p30_processing.py  p40_microtomy.py  p50_staining.py  p60_labelling.py  p70_scanning.py  p80_qc.py  p90_reporting.py
dighosp-des/notebooks/: kpi_test.ipynb  schema.ipynb  sim_test.ipynb
dighosp-docs/: Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
dighosp-docs/source/: changelog.md  conf.py  docker.md  index.md  roadmap.md  test.md
dighosp-docs/source/_static/: custom.css
dighosp-docs/source/deploy/: docker.md  proxy.md
dighosp-docs/source/development/: code_python.md  env.md  prerequisites.md
dighosp-docs/source/modules/: des.md  frontend.md  overview.md  webproxy.md
dighosp-frontend/: .env  Dockerfile  README.md  breadcrumb_test.ipynb  card_test.ipynb  compose.yml  pyproject.toml  services.toml
dighosp-frontend/dighosp_frontend/: app.py  components.py  conf.py
dighosp-frontend/dighosp_frontend/pages/: des.py  des_result_single.py  home.py
nginx/: Dockerfile  compose.yml  default.conf
