[tool.poetry]
name = "dighosp-docs"
version = "0.1.1"
description = "# Internal (developer) documentation"
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.4.3"
sphinxcontrib-kroki = "^1.3.0"
myst-parser = "^3.0.1"
sphinx-rtd-dark-mode = "^1.3.0"
setuptools = "^70.3.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
